--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,19 @@
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "moduleResolution": "node",
+    "rootDir": "./src",
+    "lib": ["ES2019"],
+    "target": "ES2019",
+    "sourceMap": true,
+    "composite": true,
+    "incremental": true,
     "declaration": true,
-    "outDir": "./dist",
-    "strict": true
+    "declarationMap": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "isolatedModules": true,
+    "esModuleInterop": true,
+    "outDir": "dist",
+    "allowUnreachableCode": false,
+    "skipLibCheck": true
   },
-  "include": ["src"],
-  "exclude": ["node_modules", "**/*.test.ts"]
 }
