Minor improvements to node/mocha configs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "esModuleInterop": true,
     "outDir": "dist",
     "allowUnreachableCode": false,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "module": "nodenext",
+    "moduleResolution": "nodenext"
   }
 }
