--- a/package.json
+++ b/package.json
@@ -34,9 +34,9 @@
   },
   "homepage": "https://github.com/gepheum/buckwheat#readme",
   "devDependencies": {
-    "@types/mocha": "latest",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^20.6.0",
-    "mocha": "latest",
+    "mocha": "^10.2.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
