--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.5",
   "description": "A TypeScript assertion library for writing useful unit tests faster",
   "type": "module",
-  "main": "./dist/cjs/expect.js",
-  "module": "./dist/esm/expect.js",
+  "main": "./dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
   "exports": {
     ".": {
-      "import": "./dist/esm/expect.js",
-      "require": "./dist/cjs/expect.js"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
     }
   },
   "files": [
