--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -2,7 +2,7 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist/esm",
-    "lib": ["ES2020"],
+    "lib": ["ES2020"]
   },
   "include": ["src"],
   "exclude": ["src/**/*.test.ts"]
