--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "build": "npm run build:cjs && npm run build:esm",
     "build:cjs": "tsc -p ./tsconfig.cjs.json && cp static/package-cjs.json dist/cjs/package.json",
     "build:esm": "tsc -p ./tsconfig.esm.json && cp static/package-esm.json dist/esm/package.json",
+    "format": "prettier --write \"src/**/*.ts\"",
     "test": "mocha"
   },
   "repository": {
@@ -54,6 +55,7 @@
     "@types/mocha": "^10.0.1",
     "@types/node": "^20.6.0",
     "mocha": "^10.2.0",
+    "prettier": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
