--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,6 @@
 {
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "trailingComma": "all"
 }
